# rust-x11-shortcuts

./: .gitignore  Cargo.toml  README.md  watch.sh
examples/: applications.rs  simple.rs  windowhook.rs
fsharp/: common.fsx  keysym.fsx  run-sample.sh  sample.fsx
src/: lib.rs  types.rs  x.rs  xlib_binding.rs
